--- a/package.json
+++ b/package.json
@@ -25,58 +25,58 @@
   },
   "homepage": "https://github.com/jackhutu/jackblog-angular1#readme",
   "dependencies": {
-    "express": "^4.14.0",
-    "serve-favicon": "^2.3.0"
+    "express": "4.14.0",
+    "serve-favicon": "2.3.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.9.4",
-    "browser-sync-spa": "^1.0.3",
-    "del": "^2.2.2",
-    "event-stream": "^3.3.4",
-    "gulp": "^3.9.1",
-    "gulp-angular-filesort": "^1.1.1",
-    "gulp-angular-templatecache": "^1.7.0",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-compass": "^2.1.0",
-    "gulp-csso": "^1.0.0",
-    "gulp-env": "^0.2.0",
-    "gulp-filter": "^3.0.1",
-    "gulp-flatten": "^0.2.0",
-    "gulp-imagemin": "^2.3.0",
-    "gulp-inject": "^2.2.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-html": "^1.0.6",
-    "gulp-ng-annotate": "^1.1.0",
-    "gulp-ng-config": "^1.2.1",
-    "gulp-nodemon": "^2.0.6",
-    "gulp-plumber": "^1.0.1",
-    "gulp-protractor": "^1.0.0",
-    "gulp-replace": "^0.5.4",
-    "gulp-rev": "^6.0.1",
-    "gulp-rev-replace": "^0.4.2",
-    "gulp-sass": "^2.0.4",
-    "gulp-sequence": "^0.4.1",
-    "gulp-size": "^2.0.0",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.4.1",
-    "gulp-useref": "^1.3.0",
-    "gulp-util": "^3.0.6",
-    "http-proxy-middleware": "^0.8.1",
-    "imagemin-pngquant": "^4.2.0",
-    "jasmine-core": "^2.3.4",
-    "jshint-stylish": "^2.0.1",
-    "karma": "^0.13.10",
-    "karma-angular-filesort": "^1.0.1",
-    "karma-coverage": "^0.5.2",
-    "karma-jasmine": "^0.3.6",
-    "karma-ng-html2js-preprocessor": "^0.1.2",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "lodash": "^3.10.1",
-    "main-bower-files": "^2.9.0",
-    "phantomjs": "^1.9.18",
-    "protractor": "^2.4.0",
-    "uglify-save-license": "^0.4.1",
-    "wiredep": "^2.2.2"
+    "browser-sync": "2.9.4",
+    "browser-sync-spa": "1.0.3",
+    "del": "2.2.2",
+    "event-stream": "3.3.4",
+    "gulp": "3.9.1",
+    "gulp-angular-filesort": "1.1.1",
+    "gulp-angular-templatecache": "1.7.0",
+    "gulp-autoprefixer": "3.1.1",
+    "gulp-compass": "2.1.0",
+    "gulp-csso": "1.0.0",
+    "gulp-env": "0.2.0",
+    "gulp-filter": "3.0.1",
+    "gulp-flatten": "0.2.0",
+    "gulp-imagemin": "2.3.0",
+    "gulp-inject": "2.2.0",
+    "gulp-jshint": "1.11.2",
+    "gulp-load-plugins": "0.10.0",
+    "gulp-minify-html": "1.0.6",
+    "gulp-ng-annotate": "1.1.0",
+    "gulp-ng-config": "1.2.1",
+    "gulp-nodemon": "2.0.6",
+    "gulp-plumber": "1.0.1",
+    "gulp-protractor": "1.0.0",
+    "gulp-replace": "0.5.4",
+    "gulp-rev": "6.0.1",
+    "gulp-rev-replace": "0.4.2",
+    "gulp-sass": "2.0.4",
+    "gulp-sequence": "0.4.1",
+    "gulp-size": "2.0.0",
+    "gulp-sourcemaps": "1.5.2",
+    "gulp-uglify": "1.4.1",
+    "gulp-useref": "1.3.0",
+    "gulp-util": "3.0.6",
+    "http-proxy-middleware": "0.8.1",
+    "imagemin-pngquant": "4.2.0",
+    "jasmine-core": "2.3.4",
+    "jshint-stylish": "2.0.1",
+    "karma": "0.13.10",
+    "karma-angular-filesort": "1.0.1",
+    "karma-coverage": "0.5.2",
+    "karma-jasmine": "0.3.6",
+    "karma-ng-html2js-preprocessor": "0.1.2",
+    "karma-phantomjs-launcher": "0.2.1",
+    "lodash": "3.10.1",
+    "main-bower-files": "2.9.0",
+    "phantomjs": "1.9.18",
+    "protractor": "2.4.0",
+    "uglify-save-license": "0.4.1",
+    "wiredep": "2.2.2"
   }
 }
